--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-    <div style="color:green">
+    <div style="color:black">
         <form action="{{ url_for('predict')}}" method="post">
             <h2>Credit card fraud detection</h2>
             <h3>Amount</h3>
