--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,12 @@
 </head>
 
 <body>
-
-    <div style="color:black">
-        <form action="{{ url_for('predict')}}" method="post">
-            <h2>Credit card fraud detection</h2>
+   
+   <div style="background-color:black;color:white;padding:30px;">
+  <h2>Cotton  Plant  Disease  Prediction</h2>
+</div> 
+    <div>
+      
             <h3>Amount</h3>
             <input id="first" name="Amount" required="required">
             <h3>Time</h3><br>
@@ -19,7 +21,7 @@
             
 
             </select>
-            <br><br><button id="sub" type="submit ">Submit</button>
+            <br><button id="sub" type="submit ">Submit</button>
             <br>
 
 
