--- a/templates/index.html
+++ b/templates/index.html
@@ -10,14 +10,15 @@
 <body>
    
    <div style="background-color:black;color:white;padding:30px;">
-  <h2>Cotton  Plant  Disease  Prediction</h2>
-</div> 
-    <div>
-      
+   <h2>Credit card fraud detection</h2>
+   </div> 
+   <div>
+            <br>
+            <br>
             <h3>Amount</h3>
-            <input id="first" name="Amount" required="required">
-            <h3>Time</h3><br>
-            <input id="second" name="Time" required="required">
+            <input id="first" name="Amount" required="required"><br>
+            <h3>Time</h3>
+            <input id="second" name="Time" required="required"><br>
             
 
             </select>
