--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
    
    <div style="background-color:white;color:black;padding:30px;">
    <h2>Credit card fraud detection</h2>
-       <h3>This app is developed using machine learning algorithms</h3>
+       <p>This app is developed using machine learning algorithms</p>
    </div> 
    <div>
             <br>
@@ -41,7 +41,7 @@
 
     <style>
         body {
-            background-color: lightslategray;
+            background-color: white;
             text-align: center;
             padding: 0px;
         }
@@ -80,7 +80,7 @@
         }
         
         #fuel:hover {
-            background-color: coral;
+            background-color: black;
         }
         
         #research {
@@ -92,7 +92,7 @@
         }
         
         #research:hover {
-            background-color: coral;
+            background-color: black;
         }
         
         #resea {
@@ -104,7 +104,7 @@
         }
         
         #resea:hover {
-            background-color: coral;
+            background-color: black;
         }
         
         #sub {
@@ -116,7 +116,7 @@
         }
         
         #sub:hover {
-            background-color: darkcyan;
+            background-color: black;
         }
         
         #first {
