--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
    
    <div style="background-color:white;color:black;padding:30px;">
    <h2>Credit card fraud detection</h2>
-       <p>This app is developed using machine learning algorithms</p>
+       <p>(This app is developed using machine learning algorithms)</p>
    </div> 
    <div>
             <br>
