--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 
 <body>
    
-   <div style="background-color:white;color:black;padding:30px;">
+   <div style="background-color:black;color:white;padding:30px;">
    <h2>Credit card fraud detection</h2>
        <p>(This app is developed using machine learning algorithms)</p>
    </div> 
