--- a/templates/index.html
+++ b/templates/index.html
@@ -46,12 +46,7 @@
             padding: 0px;
         }
         
-        #research {
-            font-size: 18px;
-            width: 100px;
-            height: 23px;
-            top: 23px;
-        }
+     
         
         #box {
             border-radius: 60px;
@@ -71,41 +66,7 @@
             font-size: 14px;
         }
         
-        #fuel {
-            width: 83px;
-            height: 43px;
-            text-align: center;
-            border-radius: 14px;
-            font-size: 20px;
-        }
-        
-        #fuel:hover {
-            background-color: black;
-        }
-        
-        #research {
-            width: 99px;
-            height: 43px;
-            text-align: center;
-            border-radius: 14px;
-            font-size: 18px;
-        }
-        
-        #research:hover {
-            background-color: black;
-        }
-        
-        #resea {
-            width: 99px;
-            height: 43px;
-            text-align: center;
-            border-radius: 14px;
-            font-size: 18px;
-        }
-        
-        #resea:hover {
-            background-color: black;
-        }
+    
         
         #sub {
             width: 120px;
@@ -116,7 +77,7 @@
         }
         
         #sub:hover {
-            background-color: black;
+            background-color: grey;
         }
         
         #first {
@@ -133,19 +94,7 @@
             text-align: center;
         }
         
-        #third {
-            border-radius: 14px;
-            height: 25px;
-            font-size: 20px;
-            text-align: center;
-        }
-        
-        #fourth {
-            border-radius: 14px;
-            height: 25px;
-            font-size: 20px;
-            text-align: center;
-        }
+       
     </style>
 </body>
 
