--- a/templates/index.html
+++ b/templates/index.html
@@ -77,7 +77,7 @@
         }
         
         #sub:hover {
-            background-color: grey;
+            background-color: lightgreen;
         }
         
         #first {
